# autodiff.py

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.py  variable.py  visu.py
.github/workflows/: tests.yml
autodiff/: datasets.py  tensor.py  utils.py  variable.py  visu.py
examples/: mnist.ipynb
src/: variable.py  visu.py
tests/: test_tensor.py  test_tensor_op_add.py  test_tensor_op_div.py  test_tensor_op_dot.py  test_tensor_op_exp.py  test_tensor_op_log.py  test_tensor_op_mean.py  test_tensor_op_mul.py  test_tensor_op_neg.py  test_tensor_op_pow.py  test_tensor_op_relu.py  test_tensor_op_sum.py  test_variable.py
